@@ -24,43 +24,124 @@ next:
 
 ## 为什么企业会选 LTS？
 
-LTS 版本的价值是稳定支持周期更长，适合生产系统长期运行。Java 8 曾经是主线很久，但新框架、新依赖和新运行时优化逐步把基线推向 Java 17。
+LTS 版本的价值是稳定支持周期更长，适合生产系统长期运行。生产系统不只看语法新不新，还要看依赖生态、框架支持、运维工具、镜像基线、监控告警和团队迁移成本。
+
+Java 17 在 2021 年 9 月发布，是一个长期支持版本。对很多 Java 8 存量系统来说，它的价值不是某个单点特性，而是把 Java 9 到 17 之间的一批变化沉淀成可长期使用的新基线：
+
+- 模块化和 JDK 内部 API 封装更严格；
+- 容器环境下的 CPU、内存感知更成熟；
+- G1、ZGC、Shenandoah 等 GC 能力继续演进；
+- 文本块、record、sealed class、switch 表达式等语言能力稳定可用；
+- 主流框架和中间件逐步把 Java 17 作为重要支持线。
+
+Java 11 也是 LTS，后续也有新的 LTS 版本。这里说 Java 17 是“新主线”，主要针对大量从 Java 8 迁移的企业系统：如果要升级到 Spring Boot 3 / Spring 6，Java 17 就是绕不开的最低基线。
 
 升级 Java 17 常见收益：
 
-- 更现代的语言特性。
-- 更好的容器环境适配。
-- 更丰富的 GC 选择。
-- 框架生态支持更集中。
+- 语言表达更简洁：减少 DTO、分支判断、多行字符串上的样板代码。
+- 运行时更适合云原生：容器资源识别、GC 日志和诊断能力更完整。
+- 生态支持更集中：新版本框架、驱动、监控组件会优先覆盖现代 JDK。
+- 安全边界更清晰：JDK 内部 API 不再被随意反射访问。
 
-## 哪些语法值得关注？
+## 哪些特性是 Java 17 新增，哪些只是 Java 17 基线可用？
 
-Java 17 前后最常被问到的特性包括：
+面试里容易把“Java 17 首次引入”和“Java 17 这个 LTS 基线里可以稳定使用”混在一起。版本边界要说清楚：
 
-- `var` 局部变量类型推断。
-- 文本块，适合 SQL/JSON 多行字符串。
-- `record`，适合不可变数据载体。
-- `sealed class`，限制继承层级。
-- switch 表达式，减少样板代码。
+| 特性                     | 正式版本     | Java 17 里的意义                        |
+| ------------------------ | ------------ | --------------------------------------- |
+| switch 表达式            | Java 14      | 可以用 `->` 和 `yield` 写更清晰的表达式 |
+| 文本块                   | Java 15      | SQL、JSON、HTML 多行字符串更可读        |
+| `record`                 | Java 16      | 稳定表达不可变数据载体                  |
+| `sealed class/interface` | Java 17      | 正式限制继承或实现边界                  |
+| switch 模式匹配          | Java 21 转正 | Java 17 仍是预览，不能当成正式特性介绍  |
 
-这些特性不是为了“少写几行”，而是让数据模型和分支表达更清楚。
+所以更准确的说法是：Java 17 的价值不是“这些语法都是 17 发明的”，而是它把一批 Java 8 之后的语言改进带入了可长期运行的生产基线。
 
-## 升级要注意什么？
+## record 和 sealed class 解决什么建模问题？
+
+`record` 适合透明的数据载体。声明组件后，编译器会生成构造器、访问器、`equals`、`hashCode` 和 `toString`。
+
+```java
+public record UserSummary(Long id, String name, String mobile) {}
+```
+
+它适合查询投影、接口 DTO、配置快照、消息事件载体。不适合有复杂生命周期、可变状态、延迟加载代理、深继承层级的领域对象。还要注意：record 组件引用不能重新赋值，不代表引用对象内部一定不可变；如果组件是 `List`，必要时要做防御性拷贝。
+
+`sealed` 用来限制继承边界：
+
+```java
+sealed interface PayResult permits Success, Failed, Processing {}
+
+record Success(String tradeNo) implements PayResult {}
+record Failed(String code, String message) implements PayResult {}
+record Processing(String requestId) implements PayResult {}
+```
+
+子类型必须继续声明为 `final`、`sealed` 或 `non-sealed`。这让类型空间变得可控，适合支付结果、订单状态、规则表达式 AST 这类有限集合。它不适合开放插件 SPI、第三方 SDK 扩展点这类需要外部自由扩展的继承体系。
+
+## Spring Boot 3 为什么会把 Java 17 推到台前？
+
+Spring Framework 6 和 Spring Boot 3 的最低 JDK 基线是 Java 17。这是很多团队迁移 Java 17 的直接原因。
+
+但 Boot 3 升级不只是把 `JAVA_HOME` 改成 17。它还会带来一组连锁变化：
+
+- Servlet、JPA、Validation 等规范从 `javax.*` 迁移到 `jakarta.*`。
+- Spring、Hibernate、Jackson、Lombok、字节码增强库都要检查兼容版本。
+- 老旧中间件 starter 可能还停留在 Java 8 / Spring Boot 2 生态。
+- CI 镜像、构建插件、测试插件和运行脚本都要同步升级。
+
+因此，面试里说“Java 17 是 Boot 3 的基础”还不够，还要补一句：Boot 3 迁移同时是 JDK、框架、包名和依赖生态的整体迁移。
+
+## 强封装会影响哪些旧代码？
+
+Java 9 引入模块系统后，JDK 内部 API 开始逐步收紧；Java 16 起默认强封装更多 JDK 内部元素，Java 17 延续了这个方向。
+
+旧项目里常见风险包括：
+
+- 直接使用 `sun.misc.*`、`com.sun.*` 等内部 API；
+- 通过反射访问 JDK 私有字段或方法；
+- 依赖较旧的 ASM、Byte Buddy、CGLIB、Mockito、序列化框架；
+- 启动参数里长期堆着 `--illegal-access` 或大量 `--add-opens`。
+
+迁移口径应该是：优先升级依赖和替换标准 API；`--add-opens` 只能作为临时兜底，并且要记录清理计划。长期依赖开放内部包，会把问题推迟到下一次 JDK 升级。
+
+## GC 和 JVM 参数要怎么检查？
+
+从 Java 8 升到 Java 17，最容易踩的是 JVM 参数仍然按旧版本写。
+
+CMS 已经被移除，如果启动脚本里还有 `-XX:+UseConcMarkSweepGC`，Java 17 会直接启动失败。GC 日志参数也发生过变化，老的 `-XX:+PrintGCDetails`、`-Xloggc` 应迁移到统一日志风格，例如 `-Xlog:gc*`。
+
+GC 选择也不能简单说“Java 17 默认就是 ZGC”。更稳的口径是：
+
+| 场景              | 更常见选择       | 关注点                               |
+| ----------------- | ---------------- | ------------------------------------ |
+| 普通在线服务      | G1               | 吞吐、停顿、堆大小的平衡             |
+| 低延迟服务        | ZGC / Shenandoah | 更低停顿，但要结合发行版和资源验证   |
+| Java 8 老服务迁移 | 先审启动参数     | CMS、GC 日志、Metaspace、容器参数    |
+| 容器部署          | 显式确认资源限制 | CPU 配额、内存上限、堆比例、OOM 行为 |
+
+升级后不要只看“能启动”，还要看 GC 日志、p95/p99、CPU、内存、容器 OOM、线程数和连接池等待。
+
+## 从 Java 8 升级到 Java 17 要查什么？
 
 从 Java 8 升级到 Java 17，不能只改 JDK：
 
-1. 检查 Spring Boot、Maven 插件、字节码增强库版本。
-2. 检查非法反射、JDK 内部 API 依赖。
-3. 检查 GC 参数是否仍然有效。
-4. 先做测试环境全量回归和压测。
+1. 构建链路：Maven / Gradle、compiler plugin、Surefire、JaCoCo、Docker 基础镜像。
+2. 依赖版本：Spring、Hibernate、Jackson、Lombok、ASM、Byte Buddy、CGLIB、数据库驱动。
+3. 代码扫描：`sun.misc.*`、反射访问 JDK 内部类、`javax.*`、Nashorn、JAXB / JAX-WS。
+4. JVM 参数：CMS、GC 日志、Metaspace、堆大小、容器 CPU / 内存参数。
+5. 运行验证：编译、单测、集成测试、启动脚本、压测、灰度和回滚方案。
+
+升级成功的标准不是“本地能编译”，而是测试环境和灰度环境能证明：功能兼容、性能曲线可接受、监控指标稳定、出问题能快速回滚。
 
 ## 小结
 
-1. Java 17 是很多企业从 Java 8 迁移后的稳定 LTS 基线。
-2. record、sealed class、文本块等特性能减少样板并强化表达。
-3. 升级重点在生态兼容、非法反射、构建插件和 GC 参数。
-4. 生产迁移必须经过回归和压测，不能只看本地能编译。
+1. Java 17 的核心价值是把 Java 9 到 17 的语言、运行时、生态和封装变化沉淀成 LTS 基线。
+2. 文本块、record、switch 表达式不是 Java 17 首发；Java 17 首个正式落地的代表性语法是 sealed class。
+3. Spring Boot 3 / Spring 6 最低要求 Java 17，迁移还会涉及 `javax.*` 到 `jakarta.*`。
+4. Java 8 升级 Java 17 的主要风险在依赖兼容、非法反射、JDK 内部 API、GC 参数和构建链路。
+5. 生产迁移必须经过回归、压测、灰度和回滚验证，不能只看本地能编译。
 
 ## 参考
 
-基于 Oracle Java SE Documentation 与 OpenJDK JEP 中 Java 8、Java 17、Java 21、record、sealed class、pattern matching 和 virtual threads 等相关官方内容整理。
+综合 Java SE 官方文档、OpenJDK JEP 与相关工程实践整理，并对 Java 17 LTS 定位、Spring Boot 3 基线、语言特性版本边界和迁移风险做了交叉验证。
